首页布局包含栏目分类热点文章轮播图文章详情24小时热点新闻基本完成

--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,11 @@
 	<dependencies>
 
 		<!-- 依赖自己jar -->
-		<!-- <dependency>
+		<dependency>
 			<groupId>com.duanwl</groupId>
   			<artifactId>duanwl-common</artifactId>
  			 <version>0.0.1-SNAPSHOT</version>
-		</dependency> -->
+		</dependency>
 
 
 		<!-- spring 及springMVC -->
